# poset-type-theory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Setup.hs  cabal.project  ctt-mode.el  fancy-postt.cabal  hie.yaml  postt.cabal  stack.yaml
.github/workflows/: haskell.yml  latex.yml
doc/: poset.tex
examples/: Bool.ctt  CompCube.ctt  Empty.ctt  Equivariant.ctt  EquivariantCoe.ctt  Foundations.ctt  Int.ctt  Line.ctt  List.ctt  Lock.ctt  Nat.ctt  Paths.ctt  Prelude.ctt  PropTrunc.ctt  S1.ctt  Square.ctt  Sum.ctt  Test.ctt  Torus.ctt  Unit.ctt  Univalence.ctt
src/: Main.hs
src/Algebra/: Lattice.hs
src/PosTT/: Common.hs  Conversion.hs  Errors.hs  Eval.hs  HeadLinearReduction.hs  Poset.hs  Pretty.hs  Pretty.hs-boot  Quotation.hs  SAT.hs  Terms.hs  TypeChecker.hs  Values.hs
src/PosTT/Frontend/: Exp.cf  PreTerms.hs  ScopeChecker.hs
