cabal-version:      3.0
name:               fancy-postt
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Jonas Hoefer
maintainer:         hoferj@chalmers.se

-- A copyright notice.
-- copyright:

category:           Dependent Types
build-type:         Custom

extra-source-files: CHANGELOG.md, src/PosTT/Frontend/Exp.cf

custom-setup
  setup-depends:
    base,
    Cabal,
    process

executable fancy-postt
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Algebra.Lattice
      , PosTT.Common
      , PosTT.Conversion
      , PosTT.Errors
      , PosTT.Eval
      , PosTT.Frontend.Exp.Abs
      , PosTT.Frontend.Exp.ErrM
      , PosTT.Frontend.Exp.Layout
      , PosTT.Frontend.Exp.Lex
      , PosTT.Frontend.Exp.Par
      , PosTT.Frontend.Exp.Print
      , PosTT.Frontend.Exp.Skel
      , PosTT.Frontend.PreTerms
      , PosTT.Frontend.ScopeChecker
      , PosTT.HeadLinearReduction
      , PosTT.Poset
      , PosTT.Pretty
      , PosTT.Quotation
      , PosTT.SAT
      , PosTT.Terms
      , PosTT.TypeChecker
      , PosTT.Values

    default-extensions:
        TypeFamilies
      , ImplicitParams
      , LambdaCase
      , PatternSynonyms
      , ViewPatterns
      , OverloadedStrings
      , UndecidableInstances
      , DerivingVia
    build-depends:    
        array
      , base ^>=4.17.2.1
      , containers
      , directory
      , extra
      , filepath
      , haskeline
      , mtl
      , optparse-applicative
      , prettyprinter
    build-tool-depends:
        alex:alex
      , happy:happy
      , BNFC:bnfc
    hs-source-dirs:   src
    default-language: GHC2021
